# Credit-Card-Fraud_Detection

./: .gitignore  Dockerfile  config.yaml  mlflow.db  pyproject.toml  requirements.txt
mlruns/1/8856a50cf3cf400098a8f5af72207439/artifacts/code/: load_data.py
src/: mlflow.db
src/config/: data_schema.yaml
src/data_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/datapipeline/config/: data_schema.yaml  logging_config.py
src/datapipeline/dataset_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/datapipeline/pipeline/: main.py
src/mlruns/1/f79e39972f4048a58b1df8d1bb6905a4/artifacts/schema/: data_schema.yaml
